--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ header {
 
   */
 }
+
 .contenedor__inicio .imagen__inicio {
   grid-column: 1/2;
   grid-row: 1/3;
@@ -110,6 +111,7 @@ header {
   background-size: cover;
   background-position: center;
 }
+
 .contenedor__inicio .grande__arriba {
   grid-column: 2/5;
   grid-row: 1;
@@ -117,6 +119,7 @@ header {
   background-size: cover;
   background-position: center;
 }
+
 .contenedor__inicio .grande__abajo {
   grid-column: 4/5;
   grid-row: 2;
@@ -124,12 +127,14 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 .contenedor__inicio .chico__abajo {
   font-size: xx-large;
   font-weight: 700;
   grid-column: 2/4;
   grid-row: 2;
 }
+
 .contenedor__inicio .chico__abajo span {
   color: red;
 }
@@ -139,27 +144,33 @@ header {
 .contenedor__servicios__chico {
   display: none;
 }
+
 .contenedor__servicios__chico .accordion {
   display: none;
 }
+
 .contenedor__servicios__chico .accordion .accordion-button {
   height: 100px;
 }
+
 .contenedor__servicios__chico .accordion .accordion-body.primero,
 .contenedor__servicios__chico .accordion .accordion-body.segundo,
 .contenedor__servicios__chico .accordion .accordion-body.tercero {
   height: 50px;
 }
+
 .contenedor__servicios__chico .accordion .primero {
   background-image: url(../imagenes/s1.JPG);
   background-size: cover;
   background-position: center;
 }
+
 .contenedor__servicios__chico .accordion .segundo {
   background-image: url(../imagenes/s2.JPG);
   background-size: cover;
   background-position: center;
 }
+
 .contenedor__servicios__chico .accordion .tercero {
   background-image: url(../imagenes/s3.JPG);
   background-size: cover;
@@ -167,64 +178,79 @@ header {
 }
 
 .contenedor__servicios__grande {
-  height: 650px;
   margin: 16px;
 }
+
 .contenedor__servicios__grande .sliders {
+  padding-left: 0;
   width: 100%;
   display: flex;
   overflow: hidden;
+  position: relative;
 }
+
 .contenedor__servicios__grande .sliders .slider {
   list-style-type: none;
-  height: 600px;
+  height: 650px;
   width: 5%;
   overflow: hidden;
-  -webkit-transition: all 500ms linear;
-  -moz-transition: all 500ms linear;
-  -o-transition: all 500ms linear;
-  -ms-transition: all 500ms linear;
   transition: all 500ms linear;
 }
+
 .contenedor__servicios__grande .sliders .slider a.accionado {
   display: block;
   height: 100%;
   position: relative;
 }
+
 .contenedor__servicios__grande .sliders .slider a.accionado span {
   font-weight: 600;
   color: #fff;
   transform: rotate(270deg);
   position: absolute;
-  top: 10%;
   width: 140px;
-  left: -30%;
   height: 100px;
 }
-.contenedor__servicios__grande .sliders .slider a.accionado .contenido__interior {
+
+.contenedor__servicios__grande .sliders .slider .contenido__interior {
   display: block;
   width: 720px;
   padding: 40px;
   color: #fff;
 }
+
+.contenedor__servicios__grande .sliders .slider .contenido__interior span,
+.contenedor__servicios__grande .sliders .slider .contenido__interior p {
+  background-color: rgba(128, 128, 128, 0.622);
+  padding-inline: 1rem;
+}
+
+.contenedor__servicios__grande .sliders .slider .contenido__interior p {
+  padding-block: 1rem;
+}
+
 .contenedor__servicios__grande .sliders .servicio1 {
-  background-image: url(../imagenes/pr1.JPG);
+  background-image: url(../imagenes/s1.jpg);
   background-size: cover;
   background-position: center;
 }
+
 .contenedor__servicios__grande .sliders .servicio2 {
-  background-image: url(../imagenes/pr2.JPG);
+  background-image: url(../imagenes/s2.jpg);
   background-size: cover;
   background-position: center;
 }
+
 .contenedor__servicios__grande .sliders .servicio3 {
-  background-image: url(../imagenes/pr3.JPG);
+  background-image: url(../imagenes/s3.jpg);
   background-size: cover;
   background-position: center;
 }
+
 .contenedor__servicios__grande .sliders .activo {
-  width: 80%;
+  width: 90%;
 }
+
 .contenedor__servicios__grande .sliders .activo a.accionado {
   display: none;
 }
@@ -236,53 +262,66 @@ header {
   display: grid;
 }
 
-/* .carousel-item img {
-    height: 700px;
-} */
 /* Fin proyectos */
 /* Sobre mi */
 .contenedor__sobremi {
   display: grid;
   border: #eeeeee solid 16px;
 }
+
 .contenedor__sobremi .contenedor__info {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(10, 1fr);
+  grid-template-rows: repeat(8, 1fr);
   gap: 10px;
 }
+
 .contenedor__sobremi .contenedor__info .item__info {
   padding-bottom: 10px;
 }
+
 .contenedor__sobremi .contenedor__info .foto1 {
-  grid-row: 1/7;
+  grid-row: 1/5;
   background-image: url(../imagenes/sm1.jpg);
   background-size: contain;
+  background-repeat: no-repeat;
+  grid-column: 1;
 }
+
 .contenedor__sobremi .contenedor__info .titulo1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  grid-row: 7;
+  grid-row: 5;
+  grid-column: 1;
 }
+
 .contenedor__sobremi .contenedor__info .parrafo1 {
   padding-inline: 16px;
-  grid-row: 8/11;
+  grid-row: 6/9;
+  grid-column: 1;
 }
+
 .contenedor__sobremi .contenedor__info .titulo2 {
   display: flex;
   justify-content: center;
   align-items: center;
   grid-row: 1;
+  grid-column: 2;
 }
+
 .contenedor__sobremi .contenedor__info .parrafo2 {
   padding-inline: 16px;
   grid-row: 2/5;
+  grid-column: 2;
 }
+
 .contenedor__sobremi .contenedor__info .foto2 {
-  grid-row: 5/11;
+  grid-row: 5/9;
+  grid-column: 2;
   background-image: url(../imagenes/sm2.jpg);
   background-size: contain;
+  background-repeat: no-repeat;
 }
 
 /* Fin sobre mi */
@@ -294,11 +333,14 @@ header {
   border: #eeeeee solid 16px;
   height: 95%;
 }
+
 .contenedor__contacto .contacto__derecha {
   width: 100%;
   display: grid;
   grid-template-rows: 1fr 1fr;
+  justify-content: center;
 }
+
 .contenedor__contacto .contacto__info {
   display: flex;
   flex-direction: column;
@@ -306,26 +348,33 @@ header {
   text-align: center;
   padding: 1rem;
 }
+
 .contenedor__contacto .contacto__info ul {
   margin-top: 3rem;
   list-style-type: none;
 }
+
 .contenedor__contacto .contacto__info ul .whatsapp {
   color: #25D366;
 }
+
 .contenedor__contacto .contacto__info ul .instagram {
   color: #E1306C;
 }
+
 .contenedor__contacto .contacto__info ul .facebook {
   color: #1877F2;
 }
+
 .contenedor__contacto .contacto__info ul .linkedin {
   color: #0077B5;
 }
+
 .contenedor__contacto .contacto__mapa {
   display: flex;
   justify-content: center;
 }
+
 .contenedor__contacto .contacto__izquierda {
   padding: 1rem;
   display: flex;
@@ -333,6 +382,7 @@ header {
   justify-content: center;
   text-align: center;
 }
+
 .contenedor__contacto .contacto__izquierda .formulario__contacto {
   position: relative;
   right: -50%;
@@ -343,9 +393,11 @@ header {
   display: flex;
   flex-direction: column;
 }
+
 .contenedor__contacto .contacto__izquierda .formulario__contacto .texto__adicional {
   height: 200px;
 }
+
 .contenedor__contacto .contacto__izquierda .formulario__contacto .boton__enviar {
   margin-top: 2.5rem;
   margin-left: 50%;
@@ -535,6 +587,6 @@ header {
     background-repeat: no-repeat;
     height: 150px;
   }
-}
+} 
 
 /*# sourceMappingURL=styles.css.map */
