--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -114,18 +114,18 @@
 }
 
 .contenedor__servicios__grande {
-    height: 650px;
     margin: 16px;
 
-
     .sliders {
+        padding-left: 0;
         width: 100%;
         display: flex;
         overflow: hidden;
+        position: relative;
 
         .slider {
             list-style-type: none;
-            height: 600px;
+            height: 650px;
             width: 5%;
             overflow: hidden;
     
@@ -145,17 +145,26 @@
                     color:#fff;
                     transform: rotate(270deg);
                     position: absolute;
-                    top: 10%;
                     width: 140px;
-                    left: -30%;
                     height: 100px;
                 }
 
-                .contenido__interior {
-                    display: block;
-                    width: 720px;
-                    padding: 40px;
-                    color:#fff;
+            }
+
+            .contenido__interior {
+                display: block;
+                width: 720px;
+                padding: 40px;
+                color:#fff;
+                
+                span, 
+                p {
+                    background-color: rgba(128, 128, 128, 0.622);
+                    padding-inline: 1rem;
+                }
+
+                p {
+                    padding-block: 1rem;
                 }
 
             }
@@ -163,35 +172,34 @@
         }
 
         .servicio1 {
-            background-image: url(../imagenes/pr1.JPG);
+            background-image: url(../imagenes/s1.jpg);
             background-size: cover;
             background-position: center;
         }
         
         .servicio2 {
-            background-image: url(../imagenes/pr2.JPG);
+            background-image: url(../imagenes/s2.jpg);
             background-size: cover;
             background-position: center;
         }
         
         .servicio3 {
-            background-image: url(../imagenes/pr3.JPG);
+            background-image: url(../imagenes/s3.jpg);
             background-size: cover;
             background-position: center;
         }
 
         .activo {
-            width:80%;
+            width:90%;
 
             a.accionado {
                 display: none;
             }
             
-        }      
-
+        }     
     }
-
 }
+
 
 /* Fin Servicios */
 
@@ -201,10 +209,6 @@
     border: #eeeeee solid 16px;
     display: grid;
 }
-
-/* .carousel-item img {
-    height: 700px;
-} */
 
 /* Fin proyectos */
 
@@ -217,7 +221,7 @@
     .contenedor__info {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: repeat(10, 1fr);
+        grid-template-rows: repeat(8, 1fr);
         gap: 10px;
 
         .item__info {
@@ -225,21 +229,25 @@
         }
         
         .foto1 {
-            grid-row: 1 / 7;
+            grid-row: 1 / 5;
             background-image: url(../imagenes/sm1.jpg);
             background-size: contain;
+            background-repeat: no-repeat;
+            grid-column: 1;
         }
         
         .titulo1 {
             display: flex;
             justify-content: center;
             align-items: center;
-            grid-row: 7;
+            grid-row: 5;
+            grid-column: 1;
         }
         
         .parrafo1 {
             padding-inline: 16px;
-            grid-row: 8 / 11;
+            grid-row: 6 / 9;
+            grid-column: 1;
         }
         
         .titulo2 {
@@ -247,17 +255,21 @@
             justify-content: center;
             align-items: center;
             grid-row: 1;
+            grid-column: 2;
         }
         
         .parrafo2 {
             padding-inline: 16px;
             grid-row: 2 / 5;
+            grid-column: 2;
         }
         
         .foto2 {
-            grid-row: 5 / 11;
+            grid-row: 5 / 9;
+            grid-column: 2;
             background-image: url(../imagenes/sm2.jpg);
             background-size: contain;
+            background-repeat: no-repeat;
         }
     }
 
@@ -278,6 +290,7 @@
         width: 100%;
         display: grid;
         grid-template-rows: 1fr 1fr;
+        justify-content: center;
     }
     
     .contacto__info {
@@ -360,7 +373,7 @@
         .foto1 {
             background-size: cover;
             background-position: center;
-            grid-row: 1 / 4
+            grid-row: 1 / 4;
         }
         
         .titulo1 {
