imagenes mas chicas

--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,7 @@ header {
 }
 
 .contenedor__servicios__chico .accordion .primero {
-  background-image: url(../imagenes/s1.JPG);
+  background-image: url(../imagenes/s1.jpg);
   background-size: cover;
   background-position: center;
 }
