--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -91,20 +91,20 @@
         }
 
         .primero {
-            background-image: url(../imagenes/s1.jpg);
+            background-image: url(../imagenes/s1.JPG);
             background-size: cover;
             background-position: center;
         
         }
         
         .segundo {
-            background-image: url(../imagenes/s2.jpg);
+            background-image: url(../imagenes/s2.JPG);
             background-size: cover;
             background-position: center;
         }
         
         .tercero {
-            background-image: url(../imagenes/s3.jpg);
+            background-image: url(../imagenes/s3.JPG);
             background-size: cover;
             background-position: center;
         } 
@@ -172,19 +172,19 @@
         }
 
         .servicio1 {
-            background-image: url(../imagenes/s1.jpg);
+            background-image: url(../imagenes/s1.JPG);
             background-size: cover;
             background-position: center;
         }
         
         .servicio2 {
-            background-image: url(../imagenes/s2.jpg);
+            background-image: url(../imagenes/s2.JPG);
             background-size: cover;
             background-position: center;
         }
         
         .servicio3 {
-            background-image: url(../imagenes/s3.jpg);
+            background-image: url(../imagenes/s3.JPG);
             background-size: cover;
             background-position: center;
         }
