--- a/css/styles.css
+++ b/css/styles.css
@@ -160,19 +160,19 @@ header {
 }
 
 .contenedor__servicios__chico .accordion .primero {
-  background-image: url(../imagenes/s1.jpg);
+  background-image: url(../imagenes/s1.JPG);
   background-size: cover;
   background-position: center;
 }
 
 .contenedor__servicios__chico .accordion .segundo {
-  background-image: url(../imagenes/s2.jpg);
+  background-image: url(../imagenes/s2.JPG);
   background-size: cover;
   background-position: center;
 }
 
 .contenedor__servicios__chico .accordion .tercero {
-  background-image: url(../imagenes/s3.jpg);
+  background-image: url(../imagenes/s3.JPG);
   background-size: cover;
   background-position: center;
 }
@@ -230,19 +230,19 @@ header {
 }
 
 .contenedor__servicios__grande .sliders .servicio1 {
-  background-image: url(../imagenes/s1.jpg);
+  background-image: url(../imagenes/s1.JPG);
   background-size: cover;
   background-position: center;
 }
 
 .contenedor__servicios__grande .sliders .servicio2 {
-  background-image: url(../imagenes/s2.jpg);
+  background-image: url(../imagenes/s2.JPG);
   background-size: cover;
   background-position: center;
 }
 
 .contenedor__servicios__grande .sliders .servicio3 {
-  background-image: url(../imagenes/s3.jpg);
+  background-image: url(../imagenes/s3.JPG);
   background-size: cover;
   background-position: center;
 }
