--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Hind:wght@300;700&display=swap");
 * {
   margin: 0;
@@ -103,7 +104,6 @@ header {
 
   */
 }
-
 .contenedor__inicio .imagen__inicio {
   grid-column: 1/2;
   grid-row: 1/3;
@@ -111,7 +111,6 @@ header {
   background-size: cover;
   background-position: center;
 }
-
 .contenedor__inicio .grande__arriba {
   grid-column: 2/5;
   grid-row: 1;
@@ -119,7 +118,6 @@ header {
   background-size: cover;
   background-position: center;
 }
-
 .contenedor__inicio .grande__abajo {
   grid-column: 4/5;
   grid-row: 2;
@@ -127,14 +125,12 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
 }
-
 .contenedor__inicio .chico__abajo {
   font-size: xx-large;
   font-weight: 700;
   grid-column: 2/4;
   grid-row: 2;
 }
-
 .contenedor__inicio .chico__abajo span {
   color: red;
 }
@@ -144,43 +140,39 @@ header {
 .contenedor__servicios__chico {
   display: none;
 }
-
 .contenedor__servicios__chico .accordion {
   display: none;
 }
-
 .contenedor__servicios__chico .accordion .accordion-button {
   height: 100px;
 }
-
-.contenedor__servicios__chico .accordion .accordion-body.primero,
-.contenedor__servicios__chico .accordion .accordion-body.segundo,
-.contenedor__servicios__chico .accordion .accordion-body.tercero {
-  height: 50px;
+.contenedor__servicios__chico .accordion .accordion-body {
+  position: relative;
 }
-
 .contenedor__servicios__chico .accordion .primero {
   background-image: url(../imagenes/s1.JPG);
-  background-size: cover;
-  background-position: center;
 }
-
 .contenedor__servicios__chico .accordion .segundo {
   background-image: url(../imagenes/s2.JPG);
+}
+.contenedor__servicios__chico .accordion .tercero {
+  background-image: url(../imagenes/s3.JPG);
+}
+.contenedor__servicios__chico .accordion .primero,
+.contenedor__servicios__chico .accordion .segundo,
+.contenedor__servicios__chico .accordion .tercero {
+  height: 50px;
   background-size: cover;
   background-position: center;
 }
-
-.contenedor__servicios__chico .accordion .tercero {
-  background-image: url(../imagenes/s3.JPG);
-  background-size: cover;
-  background-position: center;
+.contenedor__servicios__chico .accordion .p__acordionservicio {
+  padding: 0.5rem;
+  text-align: center;
 }
 
 .contenedor__servicios__grande {
   margin: 16px;
 }
-
 .contenedor__servicios__grande .sliders {
   padding-left: 0;
   width: 100%;
@@ -188,21 +180,22 @@ header {
   overflow: hidden;
   position: relative;
 }
-
 .contenedor__servicios__grande .sliders .slider {
   list-style-type: none;
   height: 650px;
   width: 5%;
   overflow: hidden;
+  -webkit-transition: all 500ms linear;
+  -moz-transition: all 500ms linear;
+  -o-transition: all 500ms linear;
+  -ms-transition: all 500ms linear;
   transition: all 500ms linear;
 }
-
 .contenedor__servicios__grande .sliders .slider a.accionado {
   display: block;
   height: 100%;
   position: relative;
 }
-
 .contenedor__servicios__grande .sliders .slider a.accionado span {
   font-weight: 600;
   color: #fff;
@@ -211,46 +204,38 @@ header {
   width: 140px;
   height: 100px;
 }
-
 .contenedor__servicios__grande .sliders .slider .contenido__interior {
   display: block;
   width: 720px;
   padding: 40px;
   color: #fff;
 }
-
 .contenedor__servicios__grande .sliders .slider .contenido__interior span,
 .contenedor__servicios__grande .sliders .slider .contenido__interior p {
   background-color: rgba(128, 128, 128, 0.622);
   padding-inline: 1rem;
 }
-
 .contenedor__servicios__grande .sliders .slider .contenido__interior p {
   padding-block: 1rem;
 }
-
 .contenedor__servicios__grande .sliders .servicio1 {
   background-image: url(../imagenes/s1.JPG);
   background-size: cover;
   background-position: center;
 }
-
 .contenedor__servicios__grande .sliders .servicio2 {
   background-image: url(../imagenes/s2.JPG);
   background-size: cover;
   background-position: center;
 }
-
 .contenedor__servicios__grande .sliders .servicio3 {
   background-image: url(../imagenes/s3.JPG);
   background-size: cover;
   background-position: center;
 }
-
 .contenedor__servicios__grande .sliders .activo {
   width: 90%;
 }
-
 .contenedor__servicios__grande .sliders .activo a.accionado {
   display: none;
 }
@@ -261,6 +246,9 @@ header {
   border: #eeeeee solid 16px;
   display: grid;
 }
+.contenedor__proyectos .carousel-caption__pantallaspequeñas {
+  display: none;
+}
 
 /* Fin proyectos */
 /* Sobre mi */
@@ -268,18 +256,15 @@ header {
   display: grid;
   border: #eeeeee solid 16px;
 }
-
 .contenedor__sobremi .contenedor__info {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(8, 1fr);
   gap: 10px;
 }
-
 .contenedor__sobremi .contenedor__info .item__info {
   padding-bottom: 10px;
 }
-
 .contenedor__sobremi .contenedor__info .foto1 {
   grid-row: 1/5;
   background-image: url(../imagenes/sm1.jpg);
@@ -287,7 +272,6 @@ header {
   background-repeat: no-repeat;
   grid-column: 1;
 }
-
 .contenedor__sobremi .contenedor__info .titulo1 {
   display: flex;
   justify-content: center;
@@ -295,13 +279,11 @@ header {
   grid-row: 5;
   grid-column: 1;
 }
-
 .contenedor__sobremi .contenedor__info .parrafo1 {
   padding-inline: 16px;
   grid-row: 6/9;
   grid-column: 1;
 }
-
 .contenedor__sobremi .contenedor__info .titulo2 {
   display: flex;
   justify-content: center;
@@ -309,13 +291,11 @@ header {
   grid-row: 1;
   grid-column: 2;
 }
-
 .contenedor__sobremi .contenedor__info .parrafo2 {
   padding-inline: 16px;
   grid-row: 2/5;
   grid-column: 2;
 }
-
 .contenedor__sobremi .contenedor__info .foto2 {
   grid-row: 5/9;
   grid-column: 2;
@@ -333,14 +313,12 @@ header {
   border: #eeeeee solid 16px;
   height: 95%;
 }
-
 .contenedor__contacto .contacto__derecha {
   width: 100%;
   display: grid;
   grid-template-rows: 1fr 1fr;
   justify-content: center;
 }
-
 .contenedor__contacto .contacto__info {
   display: flex;
   flex-direction: column;
@@ -348,33 +326,26 @@ header {
   text-align: center;
   padding: 1rem;
 }
-
 .contenedor__contacto .contacto__info ul {
   margin-top: 3rem;
   list-style-type: none;
 }
-
 .contenedor__contacto .contacto__info ul .whatsapp {
   color: #25D366;
 }
-
 .contenedor__contacto .contacto__info ul .instagram {
   color: #E1306C;
 }
-
 .contenedor__contacto .contacto__info ul .facebook {
   color: #1877F2;
 }
-
 .contenedor__contacto .contacto__info ul .linkedin {
   color: #0077B5;
 }
-
 .contenedor__contacto .contacto__mapa {
   display: flex;
   justify-content: center;
 }
-
 .contenedor__contacto .contacto__izquierda {
   padding: 1rem;
   display: flex;
@@ -382,7 +353,6 @@ header {
   justify-content: center;
   text-align: center;
 }
-
 .contenedor__contacto .contacto__izquierda .formulario__contacto {
   position: relative;
   right: -50%;
@@ -393,11 +363,9 @@ header {
   display: flex;
   flex-direction: column;
 }
-
 .contenedor__contacto .contacto__izquierda .formulario__contacto .texto__adicional {
   height: 200px;
 }
-
 .contenedor__contacto .contacto__izquierda .formulario__contacto .boton__enviar {
   margin-top: 2.5rem;
   margin-left: 50%;
@@ -565,6 +533,21 @@ header {
   .contenedor__proyectos {
     margin-top: 20px;
   }
+  .contenedor__proyectos .carousel-caption {
+    color: none;
+  }
+  .contenedor__proyectos .carousel-caption__pantallaspequeñas {
+    display: block;
+    background-color: black;
+    color: #fff;
+    padding: 1rem;
+  }
+  .contenedor__proyectos .carousel-caption__pantallaspequeñas h5 {
+    font-size: 1rem;
+  }
+  .contenedor__proyectos .carousel-caption__pantallaspequeñas p {
+    font-size: 0.75rem;
+  }
 }
 @media screen and (max-width: 550px) {
   .contenedor__inicio {
@@ -587,6 +570,6 @@ header {
     background-repeat: no-repeat;
     height: 150px;
   }
-} 
+}
 
 /*# sourceMappingURL=styles.css.map */
