--- a/css/styles.css
+++ b/css/styles.css
@@ -13,46 +13,93 @@ body {
 
 /* Header */
 header {
-  height: 32px;
+  height: 64px;
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: 1fr 1fr;
   align-items: center;
-  background-color: black;
+  background-color: rgb(33, 37, 41);
   color: #eeeeee;
   padding-inline: 1rem;
 }
-
-.logo img {
+header .logo img {
   background-color: #eeeeee;
-  height: 32px;
+  height: 64px;
   cursor: pointer;
 }
-
-.menu__principal {
+header .menu__principal {
   display: flex;
   justify-content: flex-end;
+  padding-right: 5px;
+  animation: slide-in-blurred-top 0.6s cubic-bezier(0.23, 1, 0.32, 1) both;
 }
-
-.menu__principal a {
+header .menu__principal a {
   display: flex;
   align-items: center;
-  color: #fff;
+  color: rgba(238, 238, 238, 0.5882352941);
   text-decoration: none;
   margin-left: 16px;
+  position: relative;
+  transition: 0.5s;
 }
-
-.menu__principal a.enlinea {
-  background-color: #eeeeee;
-  border-radius: 10px 10px 0 0;
+header .menu__principal a:hover {
   color: black;
-  height: 32px;
-  padding: 10px;
+  transition: 0.5s;
+  z-index: 2;
+}
+header .menu__principal a:hover::before {
+  transform: scaleY(1.5) scaleX(1.5);
+  opacity: 1;
+}
+header .menu__principal a:hover::after {
+  transform: scaleY(1) scaleX(1.2);
+  opacity: 1;
+}
+header .menu__principal a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-top: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  transform: scale(0.5) translateX(-50%);
+  opacity: 0;
+  transition: 0.5s;
+  z-index: -1;
+}
+header .menu__principal a::after {
+  content: "";
+  position: absolute;
+  top: 0.05rem;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #eeeeee;
+  transform: scale(0.5);
+  opacity: 0;
+  transition: 0.5s;
+  z-index: -1;
+}
+header .menu__principal .enlinea {
+  color: #eeeeee;
   display: flex;
   align-items: center;
-}
-
-.menu__principal a:hover {
   text-decoration: underline;
+}
+@keyframes slide-in-blurred-top {
+  0% {
+    transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+    transform-origin: 50% 0%;
+    filter: blur(40px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0) scaleY(1) scaleX(1);
+    transform-origin: 50% 50%;
+    filter: blur(0);
+    opacity: 1;
+  }
 }
 
 /* Fin header */
@@ -66,12 +113,10 @@ header {
   font-size: 16px;
   width: 100%;
 }
-
-.iconos {
+.elfooter .iconos {
   display: flex;
 }
-
-.icono {
+.elfooter .iconos .icono {
   color: #eeeeee;
   margin: 0 10px;
   text-decoration: none;
@@ -88,51 +133,75 @@ header {
   background-color: #eeeeee;
   height: 800px;
   overflow: hidden;
-  /*
-
-  .grande__abajo p {
-      display: flex;
-      justify-content: end;
-      font-size:xx-large;
-      font-weight: 700;
-  }
-  .chico__arriba {
-      grid-column: 5 / 7;
-      grid-row: 1;
-      background-color: bisque;
-  }
-
-  */
 }
 .contenedor__inicio .imagen__inicio {
   grid-column: 1/2;
   grid-row: 1/3;
-  background-image: url(../imagenes/p1.JPG);
   background-size: cover;
   background-position: center;
+  background-image: url(../imagenes/p1.JPG);
+  animation: slit-in-horizontal 0.45s ease-out both;
+}
+@keyframes slit-in-horizontal {
+  0% {
+    transform: translateZ(-800px) rotateX(90deg);
+    opacity: 0;
+  }
+  54% {
+    transform: translateZ(-160px) rotateX(87deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translateZ(0) rotateX(0);
+  }
 }
 .contenedor__inicio .grande__arriba {
   grid-column: 2/5;
   grid-row: 1;
-  background-image: url(../imagenes/principal_2.jpg);
   background-size: cover;
   background-position: center;
+  background-image: url(../imagenes/principal_2.jpg);
+  animation: slit-in-vertical 0.45s ease-out both;
+}
+@keyframes slit-in-vertical {
+  0% {
+    transform: translateZ(-800px) rotateY(90deg);
+    opacity: 0;
+  }
+  54% {
+    transform: translateZ(-160px) rotateY(87deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translateZ(0) rotateY(0);
+  }
 }
 .contenedor__inicio .grande__abajo {
   grid-column: 4/5;
   grid-row: 2;
-  background-image: url(../imagenes/p2.JPG);
   background-size: cover;
+  background-position: center;
+  background-image: url(../imagenes/p2.JPG);
   background-repeat: no-repeat;
+  animation: slit-in-horizontal 0.45s ease-out both;
 }
 .contenedor__inicio .chico__abajo {
   font-size: xx-large;
   font-weight: 700;
   grid-column: 2/4;
   grid-row: 2;
+  animation: fade-in 3s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 .contenedor__inicio .chico__abajo span {
   color: red;
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 /* Fin index */
@@ -219,19 +288,19 @@ header {
   padding-block: 1rem;
 }
 .contenedor__servicios__grande .sliders .servicio1 {
-  background-image: url(../imagenes/s1.JPG);
   background-size: cover;
   background-position: center;
+  background-image: url(../imagenes/s1.JPG);
 }
 .contenedor__servicios__grande .sliders .servicio2 {
-  background-image: url(../imagenes/s2.JPG);
   background-size: cover;
   background-position: center;
+  background-image: url(../imagenes/s2.JPG);
 }
 .contenedor__servicios__grande .sliders .servicio3 {
-  background-image: url(../imagenes/s3.JPG);
   background-size: cover;
   background-position: center;
+  background-image: url(../imagenes/s3.JPG);
 }
 .contenedor__servicios__grande .sliders .activo {
   width: 90%;
@@ -248,6 +317,9 @@ header {
 }
 .contenedor__proyectos .carousel-caption__pantallaspequeñas {
   display: none;
+}
+.contenedor__proyectos .texto__proyectos {
+  padding: 25px;
 }
 
 /* Fin proyectos */
@@ -267,8 +339,9 @@ header {
 }
 .contenedor__sobremi .contenedor__info .foto1 {
   grid-row: 1/5;
+  background-size: cover;
+  background-position: center;
   background-image: url(../imagenes/sm1.jpg);
-  background-size: contain;
   background-repeat: no-repeat;
   grid-column: 1;
 }
@@ -458,8 +531,6 @@ header {
   .body__contacto .contenedor__contacto .contacto__izquierda .contacto__mapa {
     margin-block: 2rem;
   }
-}
-@media screen and (max-width: 800px) {
   .contenedor__sobremi {
     display: flex;
   }
@@ -489,6 +560,9 @@ header {
   }
 }
 @media screen and (max-width: 768px) {
+  header {
+    height: 40px;
+  }
   .contenedor__inicio {
     display: grid;
     grid-template-columns: 2fr 1fr;
