--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,11 @@
 @import "header";
 @import "footer";
 
+@mixin background ($size, $position) {
+    background-size: $size;
+    background-position: $position;
+}
+
 /* Index */
 
 .contenedor__inicio {
@@ -18,54 +23,84 @@
     .imagen__inicio {
         grid-column: 1 / 2;
         grid-row: 1 / 3;
+        @include background (cover, center);
         background-image: url(../imagenes/p1.JPG);
-        background-size: cover;
-        background-position: center;
+
+        animation: slit-in-horizontal 0.45s ease-out both;
     }
+
+    @keyframes slit-in-horizontal {
+    0% {
+        transform: translateZ(-800px) rotateX(90deg);
+        opacity: 0;
+    }
+    54% {
+        transform: translateZ(-160px) rotateX(87deg);
+        opacity: 1;
+    }
+    100% {
+        transform: translateZ(0) rotateX(0);
+    }
+    }
+
+
     
     .grande__arriba {
         grid-column: 2 / 5;
         grid-row: 1;
+        @include background (cover, center);
         background-image: url(../imagenes/principal_2.jpg);
-        background-size: cover;
-        background-position: center;
+
+        animation: slit-in-vertical 0.45s ease-out both;
     }
-    
+
+    @keyframes slit-in-vertical {
+    0% {
+        transform: translateZ(-800px) rotateY(90deg);
+        opacity: 0;
+    }
+    54% {
+        transform: translateZ(-160px) rotateY(87deg);
+        opacity: 1;
+    }
+    100% {
+        transform: translateZ(0) rotateY(0);
+    }
+    }
+
+
     .grande__abajo {
         grid-column: 4 / 5;
         grid-row: 2;
+        @include background (cover, center);
         background-image: url(../imagenes/p2.JPG);
-        background-size: cover;
         background-repeat: no-repeat;
+
+        animation: slit-in-horizontal 0.45s ease-out both;
     }
-    
-    /*
-    
-    .grande__abajo p {
-        display: flex;
-        justify-content: end;
-        font-size:xx-large;
-        font-weight: 700;
-    }
-    .chico__arriba {
-        grid-column: 5 / 7;
-        grid-row: 1;
-        background-color: bisque;
-    }
-    
-    */
-    
-    
+
+   
+
     .chico__abajo {
-        font-size:xx-large;
+        font-size: xx-large;
         font-weight: 700;
         grid-column: 2 / 4;
         grid-row: 2;
         
         span {
-            color:red
+            color: red;
         }
-    
+
+        animation: fade-in 3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    }
+
+    @keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
     }
 
 }
@@ -103,17 +138,14 @@
         .segundo,
         .tercero {
             height: 50px;
-            background-size: cover;
-            background-position: center;
+            @include background (cover, center);
         }
 
         .p__acordionservicio {
             padding: 0.5rem;
             text-align: center;
         }
-
     }
-
 }
 
 .contenedor__servicios__grande {
@@ -132,11 +164,11 @@
             width: 5%;
             overflow: hidden;
     
-            -webkit-transition:all 500ms linear;
-            -moz-transition:all 500ms linear;
-            -o-transition:all 500ms linear;
-            -ms-transition:all 500ms linear;
-            transition:all 500ms linear;
+            -webkit-transition: all 500ms linear;
+            -moz-transition: all 500ms linear;
+            -o-transition: all 500ms linear;
+            -ms-transition: all 500ms linear;
+            transition: all 500ms linear;
         
             a.accionado {
                 display: block;
@@ -145,13 +177,12 @@
                 
                 span {
                     font-weight: 600;
-                    color:#fff;
+                    color: #fff;
                     transform: rotate(270deg);
                     position: absolute;
                     width: 140px;
                     height: 100px;
                 }
-
             }
 
             .contenido__interior {
@@ -175,30 +206,26 @@
         }
 
         .servicio1 {
+            @include background (cover, center);
             background-image: url(../imagenes/s1.JPG);
-            background-size: cover;
-            background-position: center;
         }
         
         .servicio2 {
+            @include background (cover, center);
             background-image: url(../imagenes/s2.JPG);
-            background-size: cover;
-            background-position: center;
         }
         
         .servicio3 {
+            @include background (cover, center);
             background-image: url(../imagenes/s3.JPG);
-            background-size: cover;
-            background-position: center;
         }
 
         .activo {
-            width:90%;
+            width: 90%;
 
             a.accionado {
                 display: none;
             }
-            
         }     
     }
 }
@@ -214,6 +241,10 @@
     
     .carousel-caption__pantallaspequeñas {
         display: none;
+    }
+
+    .texto__proyectos {
+        padding: 25px;
     }
 }
 
@@ -237,8 +268,8 @@
         
         .foto1 {
             grid-row: 1 / 5;
+            @include background (cover, center);
             background-image: url(../imagenes/sm1.jpg);
-            background-size: contain;
             background-repeat: no-repeat;
             grid-column: 1;
         }
@@ -307,27 +338,24 @@
         text-align: center;
         padding: 1rem;
 
+        $coloresredes: (
+            whatsapp: #25D366,
+            instagram: #E1306C,
+            facebook: #1877F2,
+            linkedin: #0077B5
+            );
+
         ul {
             margin-top: 3rem;
             list-style-type: none;
 
-            .whatsapp {
-                color: #25D366;
-            }
-            
-            .instagram {
-                color: #E1306C;
-            }
-            
-            .facebook {
-                color: #1877F2;
-            }
-            
-            .linkedin {
-                color: #0077B5;
+            @each $redessociales, $color in $coloresredes {
+            .#{$redessociales} {
+            color: $color;
+                }
             }
         }
-
+  
     }
     
     .contacto__mapa {
@@ -373,37 +401,37 @@
 
     .contenedor__sobremi {
 
-    .contenedor__info {
-        grid-template-rows: repeat(6, 1fr);
-        gap: 10px;
-
-        .foto1 {
-            background-size: cover;
-            background-position: center;
-            grid-row: 1 / 4;
+        .contenedor__info {
+            grid-template-rows: repeat(6, 1fr);
+            gap: 10px;
+    
+            .foto1 {
+                background-size: cover;
+                background-position: center;
+                grid-row: 1 / 4;
+            }
+            
+            .titulo1 {
+                grid-row: 4;
+            }
+            
+            .parrafo1 {
+                grid-row: 5 / 7;
+            }
+            
+            .titulo2 {
+                grid-row: 1;
+            }
+            
+            .parrafo2 {
+                grid-row: 2 / 4;
+            }
+            
+            .foto2 {
+                background-size: cover;
+                grid-row: 4 / 7;
+            }
         }
-        
-        .titulo1 {
-            grid-row: 4;
-        }
-        
-        .parrafo1 {
-            grid-row: 5 / 7;
-        }
-        
-        .titulo2 {
-            grid-row: 1;
-        }
-        
-        .parrafo2 {
-            grid-row: 2 / 4;
-        }
-        
-        .foto2 {
-            background-size: cover;
-            grid-row: 4 / 7;
-        }
-    }
 }
 
 }
@@ -478,10 +506,8 @@
             }
         }
     }
-}
 
-@media screen and (max-width: 800px) {
-
+    
     .contenedor__sobremi {
         display: flex;
 
@@ -519,7 +545,12 @@
             
 }
 
+
 @media screen and (max-width: 768px) {
+
+    header {
+        height: 40px;
+    }
 
     .contenedor__inicio {
         display: grid;
